--- a/src/clinical_gap3/shinyapp/www/main.css
+++ b/src/clinical_gap3/shinyapp/www/main.css
@@ -1,5 +1,3 @@
-.temp{background-color: #80808014;
-    padding: 20px;
-    border-radius: 20px;
-    border-right: black;
+.nav-tabs a{
+  font-size: 1.2em;
 }
