changed code for prediction of PSA to match with survfit

--- a/src/clinical_gap3/shinyapp/www/main.css
+++ b/src/clinical_gap3/shinyapp/www/main.css
@@ -1,3 +1,12 @@
 .nav-tabs a{
   font-size: 1.2em;
 }
+
+.nav-tabs a[data-value~="Documentation"]{
+  font-size: 1.2em;
+  color: orange;
+}
+
+form hr{
+  border-top: 1px solid #ccc;
+}
